[package]
name = "host"
version = "0.1.0"
authors = ["Jared Cone"]
license = "UPL-1.0"
edition = "2018"

links = "app"

[lib]
name = "host"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
roc_std = { path = "../../roc/crates/roc_std" }
libc = "0.2"
crossterm = "0.22"
rand = "0.4.3"

[workspace]
